2007-03-25  Inge Wallin  <inge@lysator.liu.se>

	Qt3 -> Qt4
	* dialogs/KCConfigSubtypePage.cc (KChartBarSubTypeChartPage)
	(KChartLineSubTypeChartPage)
	(KChartAreaSubTypeChartPage)
	Q3VButtonGroup -> QGroupBox, QButtonGroup
	
	Qt3 -> Qt4
	* dialogs/KCConfigSubtypePage.cc (KChartHiloSubTypeChartPage): 
	Q3VButtonGroup -> QGroupBox, QButtonGroup

	Qt3 -> Qt4
	* dialogs/KCConfigSubtypePiePage.cc (KCConfigSubtypePiePage): 
	Q3ButtonGroup -> QGroupBox

	Qt3 -> Qt4: Remove all remaining Q3GroupBox:
	* dialogs/KCConfigSubtypePage.cc (KChartBarSubTypeChartPage),
	(KChartLineSubTypeChartPage) 
	(KChartAreaSubTypeChartPage)
	(KChartHiloSubTypeChartPage)
	(KChartPolarSubTypeChartPage):
	Q3GroupBox -> QGroupBox

2007-03-24  Inge Wallin  <inge@lysator.liu.se>

	Qt3 -> Qt4: Remove Q3GroupBox from the Wizard
	* dialogs/KCWizardAxesPage.cc (KCWizardAxesPage): 
	* dialogs/KCWizardLabelsLegendPage.cc (KCWizardLabelsLegendPage):
	Q3GroupBox -> QGroupBox

	Qt3 -> Qt4 conversion.
	* dialogs/KCWizardDataPage.cc (KCWizardDataPage): Port from
	Q3ButtonGroup to QGroupBox and QButtonGroup.
	* dialogs/KCConfigDataPage.cc (KCConfigDataPage): Cleaning
	
	Qt3 -> Qt4 conversion.
	* dialogs/KCConfigDataPage.cc (KCConfigDataPage): Port from
	Q3ButtonGroup to QGroupBox and QButtonGroup.

	Qt3 -> Qt4 conversion.
	* dialogs/KCWizardCharttype.{h,cc} (KCWizardCharttype): Port from
	Q3ButtonGroup to QButtonGroup.

	* dialogs/KCConfigBackgroundPage.{h,cc}: remove all traces of
	class Q3ListBox.

2007-03-22  Inge Wallin  <inge@lysator.liu.se>

	More Qt3 -> Qt4 conversions.
	* kchart_part.cc (paintContent): Remove special code for double
	buffering since Qt4 does that by itself.

2007-03-21  Inge Wallin  <inge@lysator.liu.se>

	More Q3Support -> Qt4 conversions.
	* dialogs/KCWizardSubtypePage.cc (KCWizardSubtypePage):
	Q3ButtonGroup -> QGroupBox, some smaller cleanup

2007-03-18  Inge Wallin  <inge@lysator.liu.se>

	More Q3Support -> Qt4 conversions.